fix: remove explicit summary generation

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,17 +8,11 @@ on:
 jobs:
   Release:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Release
-        id: release
         uses: agilecustoms/release@main
-        with:
-          version-prefix: "v"
-
-      - name: Summary
-        run: echo "### Released ${{ steps.release.outputs.version }} :pushpin:" >> $GITHUB_STEP_SUMMARY
+        env:
+          GH_TOKEN: ${{ secrets.GH_PUBLIC_RELEASES_TOKEN }}
