misc: add custom .releaserc.json

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,5 +14,7 @@ jobs:
 
       - name: Release
         uses: agilecustoms/release@main
+        with:
+          npm-extra-deps: conventional-changelog-conventionalcommits@9.1.0
         env:
           GH_TOKEN: ${{ secrets.GH_PUBLIC_RELEASES_TOKEN }}
